# umdscheduler

./: .gitignore  LICENSE  README.md  Readme.MD  api.py  domains.json  package-lock.json  package.json  pyproject.toml  requirements.txt  scheduler.py  scraper.py  svelte.config.js  test.json  test.py  vite.config.js
.svelte-kit/: ambient.d.ts
api/: api.py  schedule.js
api-scheduler/: .gitignore  api.py  scheduler.py
api-scraper/: .gitignore  app.py  pyproject.toml  requirements.txt
api-scraper/common/: utils.py
api-scraper/db/: courses.sqlite
api-scraper/models/: courses_db_schema.sql
api-scraper/resources/: departments.py  majors.py
api-scraper/resources/courses/: all_courses.py  all_courses_mini.py  sections.py  semesters.py  specific_courses.py  specific_sections.py
api-scraper/resources/courses/utils/: all_courses_utils.py
api-scraper/scripts/: all_courses_scraper.py
backend/: .env.example  .gitignore  README.md  Readme.MD  api.py  pyproject.toml  requirements.txt
backend/api/: database.py  main.py  middleware.py  scheduler.py  schemas.py
backend/common/: db_config.py  settings.py
backend/scraper/: dbmanager.py  scraper.py
backend/src/: api.py  pyproject.toml  requirements.txt  scheduler.py  semesters.py  test.json  test.py
backend/src/api/: api.py  scheduler.py  test.json  test.py
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  vercel.json
rendercronjobworkaround/: cron.js
src/: api.py  app.html  requirements.txt  scheduler.py  scraper.py  test.json  test.py
testing/: test.json  test.py
(+82 files in other folders)
