[project]
name = "umd-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "flask-cors>=6.0.1",
    "flask-restful>=0.3.10",
    "requests>=2.32.3",
    "selenium>=4.32.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
